# eoapi-notifier

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  docker-release.yml  docker-test.yml  release.yml  test.yml
docs/: development.md  docker.md
eoapi_notifier/: __init__.py  cli.py  logging.py
eoapi_notifier/core/: event.py  filter.py  main.py  ogc.py  plugin.py  registry.py
eoapi_notifier/outputs/: __init__.py  cloudevents.py  mqtt.py
eoapi_notifier/sources/: __init__.py  pgstac.py
examples/: config.yaml  output-create.json  output-delete.json
helm-chart/eoapi-notifier/: Chart.yaml  README.md  values.yaml
helm-chart/eoapi-notifier/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  knative-crd-wait.yaml  secret-postgresql.yaml  serviceaccount.yaml  sinkbinding.yaml
helm-chart/eoapi-notifier/templates/tests/: app-test.yaml  config-test.yaml  deployment-test.yaml  knative-hooks-test.yaml
integration/: README.md  integration-test.sh  simple-config.yaml  simple-config.yaml.bak
integration/docker-compose/: docker-compose.yml  setup.sh  teardown.sh
integration/docker-compose/config/: .gitkeep  cloudevents_server.py  mosquitto.conf
integration/kubernetes/: setup.sh  teardown.sh
integration/shared/: README.md  __init__.py  common.sh  config_template.py  constants.py  pgstac_setup.py  test_data.py  test_runner.py
integration/tests/: conftest.py  pytest.ini  test_connectivity.py  test_database_setup.py  test_end_to_end.py  test_notifications.py
tests/: test_cli.py  test_cloudevents_output.py  test_event.py  test_logging.py  test_main.py  test_mqtt_output.py  test_notifier.py  test_ogc_and_filter.py  test_pgstac_source.py  test_plugin_system.py  test_registry.py
