[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eoapi-notifier"
dynamic = ["version"]
description = "Message handler for eoAPI components"
requires-python = ">=3.12"
authors = [
    { name = "Development Seed" }
]
dependencies = [
    "loguru>=0.7.3",
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-cov",
]
dev = [
    "pre-commit",
    "mypy",
    "ruff",
]

[tool.hatch.version]
path = "eoapi_notifier/__init__.py"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assertions in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--cov=eoapi_notifier",
    "--cov-fail-under=90",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["eoapi_notifier"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
