[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eoapi-notifier"
version = "0.0.1"
description = "Message handler for eoAPI components"
requires-python = ">=3.12"
authors = [
    { name = "Development Seed" }
]
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.2",
    "pytest-cov",
]
dev = [
    "pre-commit",
    "mypy",
    "ruff",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--cov=eoapi_notifier",
    "--cov-fail-under=90",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]

[tool.coverage.run]
source = ["eoapi_notifier"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
